tests/invalid/not-expected-chars.cipl
int main() {
	$$this->:assa

	@prop           @expected_col_17
	#col

	## comment?

							$ // tabs != spaces??
}